--- a/source/html/components/variety.html
+++ b/source/html/components/variety.html
@@ -3,12 +3,15 @@
   <ul class="variety__list">
     <li class="variety__item">
       <a class="variety__link" href="#">
-        <figure class="variety__wrap-img">
-          <picture>
-            <!--            1x: 342x503  2x: 684x1006-->
-            <source type="image/webp" srcset="img/desktop/bike1@1x.webp 1x, img/desktop/bike1@2x.webp 2x">
-            <img src="img/desktop/bike1@1x.jpg" srcset="img/desktop/bike1@2x.jpg 2x" width="342" height="503" alt="Дорожный велосипед" data-object-fit="cover">
-          </picture>
+        <figure class="variety__wrap">
+          <div class="variety__wrap-img">
+            <picture>
+              <!--            1x: 342x503  2x: 684x1006-->
+              <source type="image/webp" srcset="img/desktop/bike1@1x.webp 1x, img/desktop/bike1@2x.webp 2x">
+              <img src="img/desktop/bike1@1x.jpg" srcset="img/desktop/bike1@2x.jpg 2x" width="342" height="503"
+                   alt="Дорожный велосипед" data-object-fit="cover">
+            </picture>
+          </div>
           <figcaption class="variety__description">
             Дорожный велосипед
           </figcaption>
@@ -17,12 +20,15 @@
     </li>
     <li class="variety__item">
       <a class="variety__link" href="#">
-        <figure class="variety__wrap-img">
-          <picture>
-            <!--            1x: 342x503  2x: 684x1006-->
-            <source type="image/webp" srcset="img/desktop/bike2@1x.webp 1x, img/desktop/bike2@2x.webp 2x">
-            <img src="img/desktop/bike2@1x.jpg" srcset="img/desktop/bike2@2x.jpg 2x" width="342" height="566" alt="Горный велосипед" data-object-fit="cover">
-          </picture>
+        <figure class="variety__wrap">
+          <div class="variety__wrap-img">
+            <picture>
+              <!--            1x: 342x503  2x: 684x1006-->
+              <source type="image/webp" srcset="img/desktop/bike2@1x.webp 1x, img/desktop/bike2@2x.webp 2x">
+              <img src="img/desktop/bike2@1x.jpg" srcset="img/desktop/bike2@2x.jpg 2x" width="342" height="566"
+                   alt="Горный велосипед" data-object-fit="cover">
+            </picture>
+          </div>
           <figcaption class="variety__description">
             Горный велосипед
           </figcaption>
@@ -31,12 +37,15 @@
     </li>
     <li class="variety__item">
       <a class="variety__link" href="#">
-        <figure class="variety__wrap-img">
-          <picture>
-            <!--            1x: 342x503  2x: 684x1006-->
-            <source type="image/webp" srcset="img/desktop/bike3@1x.webp 1x, img/desktop/bike3@2x.webp 2x">
-            <img src="img/desktop/bike3@1x.jpg" srcset="img/desktop/bike3@2x.jpg 2x" width="342" height="513" alt="Детский велосипед" data-object-fit="cover">
-          </picture>
+        <figure class="variety__wrap">
+          <div class="variety__wrap-img">
+            <picture>
+              <!--            1x: 342x503  2x: 684x1006-->
+              <source type="image/webp" srcset="img/desktop/bike3@1x.webp 1x, img/desktop/bike3@2x.webp 2x">
+              <img src="img/desktop/bike3@1x.jpg" srcset="img/desktop/bike3@2x.jpg 2x" width="342" height="513"
+                   alt="Детский велосипед" data-object-fit="cover">
+            </picture>
+          </div>
           <figcaption class="variety__description">
             Детский велосипед
           </figcaption>
