--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -25,8 +25,10 @@
   padding: 0 30px;
 
   &::placeholder {
+    padding: 0;
     font-size: 15px;
-    line-height: 30px;
+    height: 48px;
+    //line-height: 30px;
     color: $color-placeholder;
     letter-spacing: 0.03em;
   }
