--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -23,12 +23,10 @@
 .form input {
   height: 48px;
   padding: 0 30px;
+  line-height: 30px;
 
   &::placeholder {
-    padding: 0;
     font-size: 15px;
-    height: 48px;
-    //line-height: 30px;
     color: $color-placeholder;
     letter-spacing: 0.03em;
   }
